test/inference/good/coreml_let.mlt
let main =
  let x = 42 in
  x