test/inference/bad/coreml_let.mlt
let main =
  let x = 42 in
  x x